[Features] Add login api of users
