# docs/swagger.json
@@ -14,7 +14,36 @@
     },
     "host": "localhost:8080",
     "paths": {
-        "/users/register": {
+        "/users/login/": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "parameters": [
+                    {
+                        "description": "JSON data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/register/": {
             "post": {
                 "produces": [
                     "application/json"
@@ -73,6 +102,21 @@
         }
     },
     "definitions": {
+        "controller.Login": {
+            "type": "object",
+            "required": [
+                "account",
+                "password"
+            ],
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.Register": {
             "type": "object",
             "required": [
